<resources>
    <string name="app_name">EmployeeInformation</string>
    <string name="newPass">New Password</string>
    <string name="confirm">Confirm Password</string>
    <string name="resetPass">Reset Password</string>
    <string name="submit">Submit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Name">Name : </string>
    <string name="designation">Designation : </string>
    <string name="form">Login Form</string>
    <string name="username">Username</string>
    <string name="pass">Password</string>
    <string name="login">Sign In</string>
    <string name="employeeImage">Employee Image</string>
    <string name="back">Back</string>
</resources>
