<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"

    >
    <TextView
        android:id="@+id/form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/form"
        android:layout_above="@+id/rel1"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"
        android:textColor="@color/colorAccent"
        />
    <RelativeLayout
        android:id="@+id/rel1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        >


        <EditText
            android:imeOptions="actionNext"
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_centerHorizontal="true"
            android:inputType="textPersonName"
            android:hint="@string/username"
            android:layout_marginTop="30dp"
            />

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/userName"
            android:hint="@string/pass"
            android:imeOptions="actionDone"
            />

            <Button
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_below="@id/password"
                android:layout_centerHorizontal="true"
                />

    </RelativeLayout>
</RelativeLayout>