<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:layout_centerInParent="true"
   >

    <TextView
        android:id="@+id/reset_password_form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resetPass"
        android:layout_above="@+id/layout_relative_edit_text"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"
        android:textColor="@color/colorAccent"
        />
    <RelativeLayout
        android:id="@+id/layout_relative_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        >


        <EditText
            android:imeOptions="actionNext"
            android:id="@+id/edit_text_newPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_centerHorizontal="true"
            android:inputType="textPersonName"
            android:hint="@string/newPass"
            android:layout_marginTop="30dp"
            />

        <EditText
            android:id="@+id/edit_text_confirmPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/edit_text_newPassword"
            android:hint="@string/confirm"
            android:imeOptions="actionDone"
            />

        <Button
            android:id="@+id/button_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_below="@id/edit_text_confirmPassword"
            android:layout_centerHorizontal="true"
            />

    </RelativeLayout>

</RelativeLayout>